--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "root": true,
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    // Custom rules can be added here if necessary
+    "react/no-unescaped-entities": "warn", // Change severity level if needed
+    "@typescript-eslint/no-unused-vars": "warn", // Change severity level if needed
+    "@typescript-eslint/no-explicit-any": "warn" // Change severity level if needed
+  }
 }
