--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "framer-motion": "^11.11.9",
     "next": "^14.2.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0", 
-    "eslint-config-next": "^14.2.15", 
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
